Pflanzenanzeigen auf der Startseite ergänzt