@@ -6,48 +6,65 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class PlantService {
 
-    @Autowired //Annotation zur Markierung von Objekten für die Spring Dependency Injection
+    @Autowired
     private PlantRepository plantRepository;
 
-    public PlantService(PlantRepository plantRepository){
+    public PlantService(PlantRepository plantRepository) {
         this.plantRepository = plantRepository;
     }
 
     public List<Plant> searchPlantsByName(String name) {
         return plantRepository.findByNameContainingIgnoreCase(name);
     }
-    /**
-     * Returns all plants persisted in the database.
-     *
-     * @return List of plants.
-     */
+
     public List<Plant> findAllPlants() {
         return plantRepository.findAll();
     }
 
-    /**
-     * Search for a plant by its name.
-     *
-     * @param name
-     * @return plant object
-     */
     public Plant getPlantByName(String name) {
         return plantRepository.findByName(name);
     }
 
-    public Plant persistPlant (Plant plant) {
+    public Plant persistPlant(Plant plant) {
         return plantRepository.save(plant);
     }
 
-    public List<Plant> findFirstThreeUnsoldPlants(){
-
+    public List<Plant> findFirstThreeUnsoldPlants() {
         return plantRepository.findBySoldFalseOrderByPlantIdAsc().stream()
                 .limit(3)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    public List<Plant> findFilteredAndSortedPlants(String category, String price) {
+        List<Plant> plants = plantRepository.findAll();
+
+        if (category != null && !category.isEmpty()) {
+            plants = plants.stream()
+                    .filter(plant -> plant.getCategory().equalsIgnoreCase(category))
+                    .collect(Collectors.toList());
+        }
+
+        if (price != null && !price.isEmpty()) {
+            // Assuming price is in format "min-max"
+            String[] priceRange = price.split("-");
+            if (priceRange.length == 2) {
+                try {
+                    double minPrice = Double.parseDouble(priceRange[0]);
+                    double maxPrice = Double.parseDouble(priceRange[1]);
+                    plants = plants.stream()
+                            .filter(plant -> plant.getPrice() >= minPrice && plant.getPrice() <= maxPrice)
+                            .collect(Collectors.toList());
+                } catch (NumberFormatException e) {
+                    // Handle exception
+                }
+            }
+        }
+
+        return plants;
+    }
 }
